<resources>
    <string name="app_name">Marvel Comics Catalog</string>
    <string name="character_name">Character name</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="comic_book_list">Comic Book List</string>
    <string name="comic_book">Comic Book</string>
    <string name="characters_list">Characters List</string>
    <string name="character">Character</string>
    <string name="search">Search</string>
    <string name="price">Price ($): </string>
    <string name="release_date">Release Date: </string>
    <string name="creators">Creators: </string>
    <string name="page_count">Page count: </string>
    <string name="more_info">More info: </string>
    <string name="characters">Characters</string>
    <string name="description">Description</string>
    <string name="click_here">Click here</string>
    <string name="name">Name:</string>
    <string name="role">Role:</string>
    <string name="issue_number">Issue number:</string>
    <string name="no_comics_found">No comic book records found for the provided search criteria.</string>
    <string name="no_creators_found">No creator info available.</string>
    <string name="no_characters_found">No character info available.</string>
    <string name="comic_book_title_start">Comic Book title starts with</string>
</resources>
